--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "fastclick": "^1.0.6",
     "v-viewer": "^1.6.4",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
+    "vue-masonry": "^0.13.0",
     "vue-router": "^3.5.2",
+    "vue-waterfall2": "^1.10.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "vue-template-compiler": "^2.6.11"
+    "postcss-px-to-viewport": "^1.1.1",
+    "vue-template-compiler": "^2.6.11",
+    "vue-waterfall-easy": "^2.4.4"
   }
 }
