--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-lazyload": "^1.3.3",
     "vue-masonry": "^0.13.0",
     "vue-router": "^3.5.2",
+    "vue-socket.io": "^3.0.10",
     "vue-waterfall2": "^1.10.1",
     "vuex": "^3.6.2"
   },
